Fixes BUG-42688: avoid body scroll because overflow in ipad
--HG--
extra : rebase_source : 90b8be93804b7b1f475f977187e408749404ab1a

--- a/web/org.openbravo.retail.posterminal/css/obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/obpos-main.css
@@ -69,6 +69,19 @@
   background-color: var(--color-secondary);
 }
 
+
+
+/***********************   ***********************/
+/*                 File: index.jsp               */
+/*               Folder: ./                      */
+/***********************   ***********************/
+.ob-body-standard{
+  /* helps prevent ios page scroll */
+  overflow: hidden;
+}
+
+
+
 /***********************   ***********************/
 /*                 File: order.js                */
 /*               Folder: js/model/               */
